# auto_uploud_acessorias

./: .gitignore  Gerar_exe.md  automacao_worker.py  automacao_worker.spec  main.py  main.spec  pyproject.toml
