[project]
name = "automacao-acessorias"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "pyinstaller>=6.16.0",
    "requests>=2.32.5",
    "selenium>=4.38.0",
    "ttkbootstrap>=1.18.0",
    "webdriver-manager>=4.0.2",
]
